--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,15 @@
-baseURL = 'http://example.org/'
+baseURL = 'jeffkwang.github.io'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Jeff Wang : Writings'
+theme = "Lowkey-Hugo-Theme"
+
+[params]
+    author = "Jeff Wang"
+    description = "All views expressed are my own. All views are meant to be of my personal, subjective experiences."
+
+    [[params.social]]
+        icon = "linkedin"
+        name = "LinkedIn"
+        url = ""
+
+
