--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = 'jeffkwang.github.io'
 languageCode = 'en-us'
 title = 'Jeff Wang : Writings'
-theme = "Lowkey-Hugo-Theme"
+theme = "m10c"
 
 [params]
     author = "Jeff Wang"
