--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = 'jeffkwang.github.io'
+baseURL = 'https://jeffkwang.github.io/wall-of-writing/'
 languageCode = 'en-us'
-title = 'Jeff Wang : Writings'
+title = 'Jeff's Personal Blog'
 theme = "paper"
 
 [params]
