--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
 baseURL = 'https://jeffkwang.github.io/'
 languageCode = 'en-us'
-title = "Jeff's Wall of Writing"
+title = "Notes"
 theme = "paper"
 
 [params]
-    color = "wheat"
+    color = "white"
     
     linkedin = "https://www.linkedin.com/in/jeff-wang-00/"
 
